--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -3,7 +3,7 @@ extends ../layouts/default
 block head
     meta(property="og:title" content="Register now for the SFL Ultimate Beach Series!")
     meta(property="og:url" content="http://www.sflultimate.com/register")
-    meta(property="og:description" content="Sign up for the upcoming three beach hatters on January 11th & February 2nd")
+    meta(property="og:description" content="Sign up for the upcoming three beach hatters on Sat. Jan. 11th & Sat. February 1st")
     meta(property="og:image" content="http://www.sflultimate.com/images/beach-ultimate-series-logo.jpg")
 
 block content
@@ -26,7 +26,7 @@ block content
 
         ul
             li Saturday, January 11th, 2020
-            li Saturday, February 2nd, 2020
+            li Saturday, February 1st, 2020
 
         p Register as an individual or as a pair. We'll make even teams and play a round robin!  The format will be 3:1 or 2:2 depending on attendance.
         p Each event cost $20 per player. You can sign for each one individually or both for a discounted $30.
@@ -94,8 +94,8 @@ block content
                         | Saturday, January 11th, 2020
                 .checkbox
                     label
-                        input(type="checkbox" name="registration_dates" value="2020-02-02")
-                        | Saturday, February 2nd, 2020
+                        input(type="checkbox" name="registration_dates" value="2020-02-01")
+                        | Saturday, February 1st, 2020
 
             h3 Waiver
 
