Fixing package versions

--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,7 +1,7 @@
 <!-- Special Message & Beach Hatter Tomorrow: PLEASE READ -->
 
 <div>
-  <img src="http://www.sflultimate.com/images/beach-ultimate-series-logo.jpg" alt="" style="max-width: 300px; height: auto; display: block; margin: 0 auto;">
+  <img src="http://www.sflultimate.com/images/south-florida-2020-final-optimized.png" alt="" style="max-width: 300px; height: auto; display: block; margin: 0 auto;">
 
   <div style="margin-top: 12px; background-color: #16aae6; border-top: 8px solid #0e6c92; border-bottom: 8px solid #0e6c92; height: 50px;">
   </div>  
@@ -10,35 +10,15 @@
     
     <p>Hey Beach Players!</p>
     
-    <p>This is a special e-mail to all that have ever registered for our beach hatter.</p>
+    <p>We just checked the fields and the gusts are going between 18-32mph, making it quite not fun to play (basically impossible to throw more than 5 yards).</p>
 
-    <p>Firstly, <strong>to everyone that has registered in all of our hatters</strong>, we want you to take a moment to help learn the story of <strong>Corinne & Rocco</strong> and their tragic accident.  They are lovely people that volunteer their time every day to grow the sport of ultimate in the Tampa Bay area that on New Year's eve suffered an intense blow from a drunk uninsured driver, leaving them in all worlds of emotional, financial, and physical pain.</p>
+    <p>We have decided to postpone the tournament to tomorrow, Sunday January 12th, which promises lighter winds (15-22mph) and more sun.</p>
 
-    <p>Please take a moment to hear their story, learn about it, and contribute or share their cause.  People like Rocco & Corrine help make the game we enjoy possible, by building and supporting the communities we now are accustomed to. To learn more visit:</p>
+    <p><strong>If you cannot make it and need a refund please reply back, and I will ensure that you get paid back appropriately.</strong></p>
 
-    <ul>
-      <li><a href="https://www.gofundme.com/help-corinne-and-rocco-recover">https://www.gofundme.com/help-corinne-and-rocco-recover</a></li>
-    </ul>
+    <p>Please be sure to let your friends know of the postponement so no one awkwardly shows up at a beach today.</p>
 
-    <p>Here's a photo of Corrine & Rocco at SSG:</p>
-
-    <a href="https://www.gofundme.com/help-corinne-and-rocco-recover">
-      <img src="https://d2g8igdw686xgo.cloudfront.net/36977330_1549831348454073_r.jpeg" alt="" style="display: block; margin: 0 auto; border: 8px solid #0e6c92; max-width: 600px; width: 100%;">
-    </a>
-
-    <p><strong>For those that are registered and attending tomorrow</strong>, here are some quick reminders for our final hatters:</p>
-
-    <ul>
-      <li>Bring socks to play in the sand!  It will be a sunny warm day tomorrow, and bring anything to help you stay cool.</li>
-      <li><strong>Games start at 10am sharp tomorrow</strong>. If you are planning to register tomorrow please show up between 9-9:30am so we can register you and make even teams.</li>
-      <li><strong>Bring a white and dark jersey.</strong></li>
-      <li>We do not have any deals or sponsorship with Hugh Taylor Birch State Park. Please do not ask for free parking. We suggest parking there as it is the most affordable option. Support Florida State Parks!</li>
-      <li>Please do not ask Park and Ocean to fill your ice coolers or store your gear. We are grateful to have Park and Ocean host us, please respect their wishes so we can have more events here in the future. There is a 7-11 across the street from the park entrance on Sunrise Blvd that is a good option for ice before you arrive.</li>
-      <li>After party is at Park and Ocean. All players get a 10% discount on food and bev!</li>
-      <li>Plan on playing (3) 60 minute games with breaks in between.</li>
-    </ul>
-
-    <p>In addition, we highly recommend that <a href="https://www.instagram.com/sflultimate/" target="_blank">you follow us on Instagram</a> for photos & videos of tomorrow's games, as we are excited for everyone.</p>
+    <p>We truly apologize for the inconvenienece and hope that you understand that we do it with the hope of making these games a fun-filled day.  We hope Sunday will pan out to be a great day for beach ultimate.</p>
     
     <p>Thanks,<br/>
     The SFLUltimate Board</p>
