Fixing email template for latest communication

--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -4,22 +4,30 @@
   <img src="http://www.sflultimate.com/images/south-florida-2020-final-optimized.png" alt="" style="max-width: 300px; height: auto; display: block; margin: 0 auto;">
 
   <div style="margin-top: 12px; background-color: #16aae6; border-top: 8px solid #0e6c92; border-bottom: 8px solid #0e6c92; height: 50px;">
-  </div>  
+  </div>
 
   <div style="padding: 1em;">
-    
+
     <p>Hey Beach Players!</p>
-    
-    <p>We just checked the fields and the gusts are going between 18-32mph, making it quite not fun to play (basically impossible to throw more than 5 yards).</p>
 
-    <p>We have decided to postpone the tournament to tomorrow, Sunday January 12th, which promises lighter winds (15-22mph) and more sun.</p>
+    <p>Thank you for registering for our Sunday beach hatter happening tomorrow. It's shaping up to look like a beautiful day with a high of 69, no precipitation, and 13 mph of wind. We are looking at 30+ people tomorrow!</p>
 
-    <p><strong>If you cannot make it and need a refund please reply back, and I will ensure that you get paid back appropriately.</strong></p>
+    <p>Should you have any issues or questions feel free to call Daniel Prada (me) at 954-990-9846.</p>
 
-    <p>Please be sure to let your friends know of the postponement so no one awkwardly shows up at a beach today.</p>
+    <p>Here are some quick reminders for our hatter tomorrow:</p>
 
-    <p>We truly apologize for the inconvenienece and hope that you understand that we do it with the hope of making these games a fun-filled day.  We hope Sunday will pan out to be a great day for beach ultimate.</p>
-    
+    <ul>
+      <li>Games start at 10am sharp tomorrow.  We will aim to finish on time so everyone has enough time to make Super Bowl plans.</li>
+      <li>Bring a white and dark jersey.</li>
+      <li>We do not have any deals or sponsorship with Hugh Taylor Birch State Park. Please do not ask for free parking. We suggest parking there as it is the most affordable option. Support Florida State Parks!</li>
+      <li>Please do not ask Park and Ocean to fill your ice coolers or store your gear. We are grateful to have Park and Ocean host us, please respect their wishes so we can have more events here in the future. There is a 7-11 across the street from the park entrance on Sunrise Blvd that is a good option for ice before you arrive.</li>
+      <li>After party is at Park and Ocean. All players get a 10% discount on food and bev!</li>
+      <li>Plan on playing (3) 60 minute games with breaks in between.</li>
+      <li>If anyone has extra cones, I would appreciate it!</li>
+    </ul>
+
+    <p>In addition, we highly recommend that you follow us on Instagram for photos & videos of tomorrow's games, as we are excited to play some ultimate.</p>
+
     <p>Thanks,<br/>
     The SFLUltimate Board</p>
 
@@ -44,10 +52,10 @@
     fontFamily:"-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
     fontSize: "18px",
     lineHeight: "25px",
-    color: "#333"    
+    color: "#333"
   };
 
-  
+
   for (var i = 0; i < $p.length; i++) {
     for (var style in styles) {
       $p[i].style[style] = styles[style];
