--- a/templates/views/register-team.jade
+++ b/templates/views/register-team.jade
@@ -3,8 +3,8 @@ extends ../layouts/default
 block head
     meta(property="og:title" content="Register now for the SFL Ultimate Beach Series!")
     meta(property="og:url" content="http://www.sflultimate.com/register")
-    meta(property="og:description" content="Sign up for the upcoming three beach hatters on Sat. Jan. 11th & Sat. February 1st")
-    meta(property="og:image" content="http://www.sflultimate.com/images/beach-ultimate-series-logo.jpg")
+    meta(property="og:description" content="Sign up for the special team-based tourney happening Saturday, March 7th, 2020")
+    meta(property="og:image" content="http://www.sflultimate.com/images/south-florida-2020-team-tourney-og-image.jpg")
     script(src="https://www.google.com/recaptcha/api.js?render=6Ld6rNQUAAAAAAthlbLL1eCF9NGKfP8-mQOHu89w")
 block content
 
@@ -20,7 +20,7 @@ block content
 
         p We are pumped to bring our first team beach ultimate tournament to South Florida.
 
-        p Join us on Saturday March 7th, 2020 at beautiful Crandon Park in Miami for a 4 on 4 beach tournament. We are looking for 6-8 teams of a maximum 10 person roster for a one day tournament or round robin.  Depending on the number of teams we will either play a round robin or bracket and play 4-5 games.  The on-field gender ratio is 2:2 but can be changed if both captains agree prior to each point.
+        p Join us on Saturday March 7th, 2020 at beautiful Crandon Park in Miami for a 4-on-4 beach tournament. We are looking for 6-8 teams of a maximum 10 person roster for a one day tournament or round robin.  Depending on the number of teams we will either play a round robin or bracket and play 4-5 games.  The on-field gender ratio is 2:2 but can be changed if both captains agree prior to each point.
 
         p Tournament fee is $150 per team and we will provide standard tournament snacks (bagels, bananas, oranges, apples) and water. We will have at least 1 lined field and will try to cycle teams through so every team can play at least one game on the port-a-field. We will also have prizes for the winning team and most spirited team!
 
