--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -22,7 +22,7 @@ block content
           p Since 1999, players from Dade & Broward counties unite to grow the awesome sport of Ultimate Frisbee.
           p We now welcome you to our first beach hatter this January 11th
       div.text-center
-        a.btn.btn-lg.btn-primary(href="/register") Sign Up For Beach Hatters
+        a.btn.btn-lg.btn-primary(href="/register-team") Sign Up For Last Beach Hatter Tourney
 
   .features
     .container
