Tweaks to register team page

--- a/templates/views/register-team.jade
+++ b/templates/views/register-team.jade
@@ -78,12 +78,8 @@ block content
 
             h3 Payment Information
 
-            p You will be charged <strong id="total_cost">N/A, please pick a date</strong>.
-
-            .alert.alert-info
-                strong Please note:
-                | We will be allowing registrations the day of the event on-site but they will be $25.
-
+            p You will be charged <strong id="total_cost">$150</strong>.
+            
             input(id="recaptcha" name='recaptcha_token' type='hidden')
 
             #payment-form
