Changing meta description

--- a/templates/views/register-team.jade
+++ b/templates/views/register-team.jade
@@ -1,9 +1,9 @@
 extends ../layouts/default
 
 block head
-    meta(property="og:title" content="Register now for the SFL Ultimate Beach Series!")
+    meta(property="og:title" content="Register now for the final SFL Ultimate Beach Team Tourney!")
     meta(property="og:url" content="http://www.sflultimate.com/register-team")
-    meta(property="og:description" content="Sign up for the special team-based tourney happening Saturday, March 7th, 2020")
+    meta(property="og:description" content="Bring your 10-person squad to this final tourney happening Saturday, March 7th, 2020")
     meta(property="og:image" content="http://www.sflultimate.com/images/south-florida-2020-team-tourney-og-image.jpg")
     script(src="https://www.google.com/recaptcha/api.js?render=6Ld6rNQUAAAAAAthlbLL1eCF9NGKfP8-mQOHu89w")
 block content
