Fixing with HTTPS links

--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,7 +1,7 @@
 <!-- Special Message & Beach Hatter Tomorrow: PLEASE READ -->
 
 <div>
-  <img src="http://www.sflultimate.com/images/south-florida-2020-final-optimized.png" alt="" style="max-width: 300px; height: auto; display: block; margin: 0 auto;">
+  <img src="https://www.sflultimate.com/images/south-florida-2020-final-optimized.png" alt="" style="max-width: 300px; height: auto; display: block; margin: 0 auto;">
 
   <div style="margin-top: 12px; background-color: #16aae6; border-top: 8px solid #0e6c92; border-bottom: 8px solid #0e6c92; height: 50px;">
   </div>
@@ -34,9 +34,9 @@
   </div>
 
   <div style="background-color: gray;background-color: #dddddd;text-align: center;padding: 18px;">
-    <a href="https://www.facebook.com/sflultimate/"><img src="http://www.sflultimate.com/images/email-signature/icon-facebook.png" style="max-width: 40px; padding: 5px;"></a>
-    <a href="http://www.sflultimate.com/"><img src="http://www.sflultimate.com/images/email-signature/icon-link.png" style="max-width: 40px;padding: 5px;"></a>
-    <a href="mailto:sflultimate@gmail.com"><img src="http://www.sflultimate.com/images/email-signature/icon-mail.png" style="max-width: 40px;padding: 5px"></a>
+    <a href="https://www.facebook.com/sflultimate/"><img src="https://www.sflultimate.com/images/email-signature/icon-facebook.png" style="max-width: 40px; padding: 5px;"></a>
+    <a href="https://www.sflultimate.com/"><img src="https://www.sflultimate.com/images/email-signature/icon-link.png" style="max-width: 40px;padding: 5px;"></a>
+    <a href="mailto:sflultimate@gmail.com"><img src="https://www.sflultimate.com/images/email-signature/icon-mail.png" style="max-width: 40px;padding: 5px"></a>
   </div>
 
 </div>
