--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -2,9 +2,9 @@ extends ../layouts/default
 
 block head
   meta(property="og:title"        content="South Florida Ulitmate")
-  meta(property="og:url"          content="http://www.sflultimate.com/")
+  meta(property="og:url"          content="https://www.sflultimate.com/")
   meta(property="og:description"  content="Since 1999, players from Miami & Ft. Lauderdale have united to promote grow the awesome sport of Ultimate Frisbee.")
-  meta(property="og:image"        content="http://www.sflultimate.com/images/hatter-beach-ultimate.jpg")
+  meta(property="og:image"        content="https://www.sflultimate.com/images/hatter-beach-ultimate.jpg")
 
 block css
 
