--- a/templates/views/schedule.jade
+++ b/templates/views/schedule.jade
@@ -2,10 +2,10 @@ extends ../layouts/default
 
 block head
   meta(property="og:title"        content="Spring League Schedule")
-  meta(property="og:url"          content="http://www.sflultimate.com/schedule")
+  meta(property="og:url"          content="https://www.sflultimate.com/schedule")
   meta(property="og:description"  content="Discover the games schedule for the 2017's Spring League.")
 
-  meta(property="og:image"        content="http://www.sflultimate.com/images/open-graph/schedule.jpg")
+  meta(property="og:image"        content="https://www.sflultimate.com/images/open-graph/schedule.jpg")
   meta(property="og:image:width"  content="1200")
   meta(property="og:image:height" content="630")
 
@@ -21,13 +21,13 @@ block content
         thead
           th Date
           th Time
-          th(col-span="2") Matchup 
+          th(col-span="2") Matchup
         tbody
           tr(ng-repeat="game in games | filter:colorFilter" ng-class="(game.timestamp - $parent.today > 0) ? '':'text-muted' ")
             td {{game.date | date: 'MMM d'}}
             td {{game.time}}
-            td 
-              span {{game.home}} vs. {{game.away}} 
+            td
+              span {{game.home}} vs. {{game.away}}
               span(ng-if="game.homeScore && game.awayScore") ({{game.homeScore}}-{{game.awayScore}})
               //- span(ng-if="!game.homeScore && !game.awayScore && (1481518800000 - $parent.today) > 0") (Missing stats for game)
           tr(ng-class="(1481518800000 - $parent.today > 0) ? '':'text-muted' ")
