Setting up 404s here for register team

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -20,9 +20,7 @@ block content
         .col-md-6
           h1 Welcome
           p Since 1999, players from Dade & Broward counties unite to grow the awesome sport of Ultimate Frisbee.
-          p We now welcome you to our first beach hatter this January 11th
-      div.text-center
-        a.btn.btn-lg.btn-primary(href="/register-team") Sign Up For Last Beach Hatter Tourney
+          p We have frozen all activities due to COVID-19.
 
   .features
     .container
