--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -14,7 +14,7 @@ block content
   .call-to-action(style='background-image:url("/images/beach-ultimate-cover.jpg")')
     .video-full-screen
       video(autoplay muted loop)
-        source(src='http://d137pw2ndt5u9c.cloudfront.net/SFL_Community_Beach_Hatter_2019.mp4' type='video/mp4')
+        source(src='https://d137pw2ndt5u9c.cloudfront.net/SFL_Community_Beach_Hatter_2019.mp4' type='video/mp4')
     .container
       .row
         .col-md-6
