Adding information on homepage

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -10,7 +10,6 @@ block css
 
 block content
 
-
   .call-to-action(style='background-image:url("/images/beach-ultimate-cover.jpg")')
     .video-full-screen
       video(autoplay muted loop)
@@ -20,7 +19,10 @@ block content
         .col-md-6
           h1 Welcome
           p Since 1999, players from Dade & Broward counties unite to grow the awesome sport of Ultimate Frisbee.
-          p We have frozen all activities due to COVID-19.
+          p We're starting to organize our grass fall league, registration should be opening in the coming week
+      .row
+        .col-md-12.text-center
+          a.btn.btn-lg.btn-primary(href="https://www.facebook.com/events/972376260276382" target="_blank") Learn More
 
   .features
     .container
