Setting up preview

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -6110,33 +6110,33 @@ button.close {
 #header > .navbar {
   margin-bottom: 0; }
 
-.page-register .call-to-action {
+.page-register-tournament .call-to-action {
   display: block;
   padding: 0; }
 
-.page-register .video-full-screen {
+.page-register-tournament .video-full-screen {
   position: inherit; }
 
-.page-register .container {
+.page-register-tournament .container {
   font-size: 1.2em; }
 
-.page-register .site-footer a {
+.page-register-tournament .site-footer a {
   color: #15698c; }
 
-.page-register .navbar-inverse .navbar-nav > .active > a {
+.page-register-tournament .navbar-inverse .navbar-nav > .active > a {
   background-color: #17688a; }
 
-.page-register .navbar-inverse .navbar-collapse {
+.page-register-tournament .navbar-inverse .navbar-collapse {
   border-color: #ffffff2e !important; }
 
-.page-register .site-footer .fa {
+.page-register-tournament .site-footer .fa {
   background-color: #26abe3; }
 
-.page-register .navbar-inverse, .page-register .credits, .page-register .btn-lg, .page-register .btn-group-lg > .btn {
+.page-register-tournament .navbar-inverse, .page-register-tournament .credits, .page-register-tournament .btn-lg, .page-register-tournament .btn-group-lg > .btn {
   background-color: #26abe3;
   border-color: #15698c; }
 
-.page-register .navbar-inverse .navbar-nav > li > a {
+.page-register-tournament .navbar-inverse .navbar-nav > li > a {
   color: white; }
 
 .credits {
