--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -68,7 +68,7 @@ html(lang='en')
       div(role="navigation").navbar.navbar-inverse
         .container-fluid
           a.navbar-brand(href='/')
-            img(src=(section === 'register') ? '/images/south-florida-2020-final-optimized.png': '/images/logo-skyline.png')
+            img(src=(section === 'register-tournament') ? '/images/south-florida-2020-final-optimized.png': '/images/logo-skyline.png')
           .navbar-header
             button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
               span.sr-only Toggle navigation
